--- a/090123/style.css
+++ b/090123/style.css
@@ -2,6 +2,7 @@ body{
     background-color: #101010;
     color: #F0F0F0;
     font-family: 'Bricolage Grotesque', sans-serif;
+    padding: 100px;
 }
 
 *{
@@ -11,25 +12,42 @@ body{
     border: none;
 }
 
+img{
+    box-sizing: border-box;
+    width: auto;
+    height: auto;
+}
+
+.content{
+    border-radius: 7px;
+}
+
 .wrapper-content{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     gap: 20px;
-    padding: 100px;
 }
 
 .content{
-    padding: 20px;
+    padding: 40px 20px;
     border: 1px solid #5c5c5c;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    transition: all .3s ease;
+}
+
+.content:hover{
+    background-color: #202020;
 }
 
 .img-content{
-    width: 100%;
-    height: 100px;
-    
-    box-sizing: none;
+    max-height:120px;
+    width: 200px;
+    border-radius: 5px;
 }
 
 .title{
